# fastapi_celery_postgresql_example

./: README.md  docker-compose.yml
app/: Dockerfile  Pipfile  app.py  database.py  main.py  pyproject.toml  utils.py  worker.py
app/api/v0/: router.py  user.py
app/db/models/: crud.py  models.py
app/db/postgres/: database.py
app/schemas/: schemas.py
